retire ancient tests CG4Test OKG4Test that are unclear how to bring into the CManager Geant4 integration approach without lots of additional code

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -14,7 +14,6 @@ set(TEST_SOURCES
     CGDMLPropertyTest.cc
 
     CGeometryTest.cc
-    CG4Test.cc
     G4MaterialTest.cc
     G4StringTest.cc
     G4SphereTest.cc
@@ -71,6 +70,14 @@ set(_TEST_SOURCES
 
     CX4GDMLTest.cc
 )
+
+set(FORMER_TEST_SOURCES
+
+    CG4Test.cc   ## NEEDS RE-IMPLEMENTATION FOR CManager WORKLOW : UNCLEAR HOW TO GET TORCH GENSTEPS INTO THAT 
+
+)
+
+
 
 
 foreach(SRC ${TEST_SOURCES} ${_TEST_SOURCES})
