move QCerenkov persisting into QCK, testing Cerenkov lookup

--- a/qudarap/tests/CMakeLists.txt
+++ b/qudarap/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
    QRngTest.cc
    QScintTest.cc
    QCerenkovTest.cc
+   QCKTest.cc
    QPolyTest.cc
    QSimTest.cc
    QBndTest.cc 
