rejig aiming to avoid problems with Geant4 11 G4MaterialPropertyVector typedef change, by making more use G4PhysicsVector rather than G4PhysicsOrderedFreeVector

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -89,7 +89,7 @@ set(SOURCES
     X4LogicalSurface.cc
     X4OpticalSurface.cc
 
-    X4PhysicsOrderedFreeVector.cc
+    X4Array.cc
     X4MaterialPropertyVector.cc
     X4PhysicsVector.cc
 
@@ -154,7 +154,7 @@ set(HEADERS
     X4LogicalSurface.hh
     X4OpticalSurface.hh
 
-    X4PhysicsOrderedFreeVector.hh
+    X4Array.hh
     X4MaterialPropertyVector.hh
     X4PhysicsVector.hh
 
