look into X4ScintillationTest failure

--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -41,6 +41,8 @@ set(TEST_SOURCES
     X4MaterialPropertyVectorTest.cc
 
     X4ScintillationTest.cc
+    PhysicsFreeVectorTest.cc 
+    G4MaterialPropertyVectorTest.cc 
 
     X4SurfaceTest.cc
 )
