perhaps X4ScintillationTest mismatches at 1e-5 1e-6 level are explained by changes in constants ?

--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -43,6 +43,7 @@ set(TEST_SOURCES
     X4ScintillationTest.cc
     PhysicsFreeVectorTest.cc 
     G4MaterialPropertyVectorTest.cc 
+    X4PhysicalConstantsTest.cc
 
     X4SurfaceTest.cc
 )
