--- a/okconf/tests/CMakeLists.txt
+++ b/okconf/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ include(OpticksBuildOptions)
 set(TEST_SOURCES
     OKConfTest.cc
     OpticksVersionNumberTest.cc
+    Geant4VersionInteger.cc
 )
 
 
