split off Cerenkov integration into QCerenkovIntegral as it is time consuming and needs to be done pre-cache leaving QCerenkov for mainline usage of the persisted icdf

--- a/qudarap/CMakeLists.txt
+++ b/qudarap/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SOURCES
     QScint.cc
     QScint.cu
 
+    QCerenkovIntegral.cc
     QCerenkov.cc
     QCerenkov.cu 
 
@@ -85,6 +86,7 @@ SET(HEADERS
 
     QBnd.hh
     QScint.hh
+    QCerenkovIntegral.hh
     QCerenkov.hh
 
 
