change GOpticalSurface::isSpecular to follow GOpticalSurface::isPolished corresponding to the first three geant4 polished finishes

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -27,6 +27,8 @@ set(TEST_SOURCES
     GBndLibTest.cc
     GBndLibInitTest.cc
 
+    GOpticalSurfaceTest.cc 
+
     GMeshTest.cc
     GNodeTest.cc
     GVolumeTest.cc
