new GeoChain pkg for fast iteration geometry debugging by doing all geometry conversions in a single executable

--- a/CSG_GGeo/CMakeLists.txt
+++ b/CSG_GGeo/CMakeLists.txt
@@ -3,7 +3,7 @@ set(name CSG_GGeo)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
-find_package(CUDA REQUIRED)   
+find_package(CUDA REQUIRED)  # CSG_GGeo uses CUDA headers for vector types like float4, it does not use CUDA runtime
 find_package(CSG REQUIRED)
 find_package(GGeo REQUIRED CONFIG)
 
@@ -16,9 +16,31 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR} 
 )
 
-add_executable(${name} ${name}.cc ${name}_Convert.cc)
+
+set(SOURCES)
+set(HEADERS)
+
+list(APPEND SOURCES
+    ${name}_Convert.cc
+)
+
+list(APPEND HEADERS
+    ${name}_Convert.h
+    CSG_GGEO_API_EXPORT.hh
+)
+
+
+add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
+
+add_executable(${name}Test ${name}Test.cc)
 
 target_link_libraries(${name} PUBLIC Opticks::GGeo Opticks::CSG)
 
-install(TARGETS ${name}  DESTINATION lib)
+target_link_libraries(${name}Test PUBLIC Opticks::GGeo Opticks::CSG ${name})
+
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
+install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
+
+
 
