--- a/CSG_GGeo/CMakeLists.txt
+++ b/CSG_GGeo/CMakeLists.txt
@@ -22,11 +22,13 @@ set(HEADERS)
 
 list(APPEND SOURCES
     ${name}_Convert.cc
+    CSG_GGEO_LOG.cc
 )
 
 list(APPEND HEADERS
     ${name}_Convert.h
     CSG_GGEO_API_EXPORT.hh
+    CSG_GGEO_LOG.hh
 )
 
 
@@ -36,9 +38,12 @@ add_executable(${name}Test ${name}Test.cc)
 
 target_link_libraries(${name} PUBLIC Opticks::GGeo Opticks::CSG)
 
+target_compile_definitions( ${name} PUBLIC OPTICKS_CSG_GGEO )
+
 target_link_libraries(${name}Test PUBLIC Opticks::GGeo Opticks::CSG ${name})
 
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
+
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 
