--- a/CSGOptiX/CMakeLists.txt
+++ b/CSGOptiX/CMakeLists.txt
@@ -1,30 +1,7 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name CSGOptiX)
 project(${name} VERSION 0.1.0)
-
-#[=[
-Below extracts BCM hookup for minimal boilerplate package export from the usual "include(OpticksBuildOptions)"
-of Opticks packages
-#]=]
-
-include(GNUInstallDirs)
-set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")  # override the GNUInstallDirs default of "include"
-
-find_package(BCM CONFIG)
-
-if(NOT BCM_FOUND)
-   message(STATUS "CMAKE_MODULE_PATH:${CMAKE_MODULE_PATH}")
-   message(STATUS "CMAKE_PREFIX_PATH:${CMAKE_PREFIX_PATH}   expect to find BCM in one of these prefix dirs")
-   message(STATUS "typically BCM is found thanks to the CMAKE_PREFIX_PATH envvar including ${OPTICKS_PREFIX}/externals ")
-   message(STATUS "see examples/UseBCM to debug failure to find BCM ")
-   message(FATAL_ERROR "ABORT " )
-endif()
-
-include(BCMDeploy)
-
-set(CMAKE_CXX_STANDARD 11) 
-set(CMAKE_CXX_STANDARD_REQUIRED YES)
-
+include(OpticksBuildOptions)
 
 find_package(CUDA REQUIRED)   
 find_package(OpticksCore REQUIRED)
@@ -72,11 +49,16 @@ list(APPEND SOURCES
     Params.cc 
     CSGOptiX.cc
     CSGOptiXSimulate.cc
+
+    CSGOPTIX_LOG.cc
 )
 
 list(APPEND HEADERS
     CSGOptiX.h
     CSGOptiXSimulate.h
+
+    CSGOPTIX_API_EXPORT.hh
+    CSGOPTIX_LOG.hh
 )
 
 if(OpticksOptiX_VERSION GREATER_EQUAL 70000)
@@ -109,6 +91,8 @@ message(STATUS "_generated_OBJ_files ${_generated_OBJ_files}")
 message(STATUS "_generated_PTX_files ${_generated_PTX_files}") 
 
 add_library( ${name} SHARED ${SOURCES} ${HEADERS}  ${_generated_OBJ_files} ${_generated_PTX_files}   )
+
+target_compile_definitions( ${name} PUBLIC OPTICKS_CSGOPTIX )
 
 target_link_libraries(${name} 
      PUBLIC 
