single G4VSolid zcut and tree pruning seems to be working, start expanding GeoChainTest to work with small collections of G4VSolid such as PMTs

--- a/GeoChain/CMakeLists.txt
+++ b/GeoChain/CMakeLists.txt
@@ -43,10 +43,12 @@ set(HEADERS)
 
 list(APPEND SOURCES
    GeoChain.cc
+   GeoMaker.cc
 )
 
 list(APPEND HEADERS
-   GeoChain.h
+   GeoChain.hh
+   GeoMaker.hh
 )
 
 
