move ce-genstep handling down to SEvent for use from X4Intersect aiming for a G4 xxs equivalent to cxs for ground truth comparison of intersects

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -56,6 +56,9 @@ set(SOURCES
 
     X4Gen.cc
     X4.cc
+    X4geomdefs.cc
+    X4Intersect.cc
+
     X4Named.cc
     X4NameOrder.cc
     X4Entity.cc
@@ -120,6 +123,9 @@ set(HEADERS
 
     X4Gen.hh
     X4.hh
+    X4geomdefs.hh
+    X4Intersect.hh
+
     X4Named.hh
     X4NameOrder.hh
     X4Entity.hh
