possible fix for notes/issues/ellipsoid_not_maintaining_shape_within_boolean_combination.rst in X4Solid::convertDisplacedSolid

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -58,6 +58,7 @@ set(SOURCES
     X4.cc
     X4geomdefs.cc
     X4Intersect.cc
+    X4GeometryMaker.cc
 
     X4Named.cc
     X4NameOrder.cc
@@ -125,6 +126,8 @@ set(HEADERS
     X4.hh
     X4geomdefs.hh
     X4Intersect.hh
+    X4GeometryMaker.hh
+
 
     X4Named.hh
     X4NameOrder.hh
