X4IntersectVolumeTest by combining intersects from a PV tree of solids with structure transforms

--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -6,7 +6,8 @@ include(OpticksBuildOptions)
 find_package(PMTSim CONFIG)
 
 set(PMTSIM_TEST_SOURCES
-   X4IntersectTest.cc 
+   X4IntersectSolidTest.cc 
+   X4IntersectVolumeTest.cc 
 )
 
 set(TEST_SOURCES
