--- a/cudarap/CMakeLists.txt
+++ b/cudarap/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name CUDARap)
 project(${name} VERSION 0.1.0)
-include(OpticksBuildOptions)      
+include(OpticksBuildOptions NO_POLICY_SCOPE)      
 
-if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
-    cmake_policy(SET CMP0077 OLD)
-endif()
+#if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+#    cmake_policy(SET CMP0077 OLD)
+#endif()
 
 
 set(FLAGS_VERBOSE ON)
