--- a/CSG/CMakeLists.txt
+++ b/CSG/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name CSG)
 project(${name} VERSION 0.1.0)
-include(OpticksBuildOptions)
+include(OpticksBuildOptions NO_POLICY_SCOPE)
 
 #[=[
 Below extracts BCM hookup for minimal boilerplate package export from the usual "include(OpticksBuildOptions)"
