add omitted extensions causing a newer cmake warning for okop

--- a/okop/tests/CMakeLists.txt
+++ b/okop/tests/CMakeLists.txt
@@ -6,8 +6,8 @@ include(OpticksBuildOptions)
 set(TEST_SOURCES
     OpIndexerTest.cc
     OpSeederTest.cc
-    dirtyBufferTest
-    compactionTest
+    dirtyBufferTest.cc
+    compactionTest.cc
     OpSnapTest.cc
     OpFlightPathTest.cc
 )
