encapsulate Opticks finding as needed by j/issues/opticks_with_cmake_offline.rst into cmake/Modules/FindOpticks.cmake and test with examples/UseOpticks/go.sh

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -192,6 +192,8 @@ set(HEADERS
     X4_TAIL.hh
 )
 
+# note that X4PhysicsOrderedFreeVector.hh is missing 
+
 
 add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
 target_link_libraries( ${name} PUBLIC 
