setting up vars in cmake/Modules/FindOpticks.cmake to simplify and standardize cmake command line when finding Opticks

--- a/examples/UseOpticks/CMakeLists.txt
+++ b/examples/UseOpticks/CMakeLists.txt
@@ -1,3 +1,11 @@
+#[=[
+
+testing the snippet to find Opticks with in::
+
+   $JUNOTOP/offline/cmake/JUNODependencies.cmake
+
+#]=]
+
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name UseOpticks)
 project(${name} VERSION 0.1.0)
@@ -6,11 +14,15 @@ find_package(OpticksNonExisting QUIET)
 message(STATUS "OpticksNonExisting_FOUND  : ${OpticksNonExisting_FOUND} ")
 
 
-set(Opticks_VERBOSE ON)
-find_package(Opticks QUIET)
+## Opticks
+if(DEFINED ENV{OPTICKS_PREFIX})
+   set(Opticks_VERBOSE YES)
+   set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "$ENV{OPTICKS_HOME}/cmake/Modules")
+   find_package(Opticks QUIET MODULE)
+   message(STATUS "${CMAKE_CURRENT_LIST_FILE} : Opticks_FOUND:${Opticks_FOUND}" )
+endif()
 
-message(STATUS "Opticks_FOUND   : ${Opticks_FOUND} ")
-message(STATUS "Opticks_MODULE  : ${Opticks_MODULE} ")
+
 
 
 
