change to X4SolidMaker rather than less specific X4GeometryMaker, take look at X4Solid::convertSphere idea from LHCb Lucas, start GeoChainNodeTest converting from nnode

--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ set(PMTSIM_TEST_SOURCES
 
 set(TEST_SOURCES
 
-    X4GeometryMakerTest.cc
+    X4SolidMakerTest.cc
 
     X4Test.cc
     X4EntityTest.cc
