--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name CSGTest)
 project(${name} VERSION 0.1.0)
 
+find_package(OpticksCore REQUIRED CONFIG)
 
 set(TEST_SOURCES
     CSGNodeTest.cc
@@ -24,14 +25,14 @@ foreach(SRC ${TEST_SOURCES})
 
     add_test(${name}.${TGT} ${TGT})
 
-    target_link_libraries(${TGT} Opticks::CSG Opticks::SysRap)
+    target_link_libraries(${TGT} Opticks::CSG Opticks::OpticksCore)
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
 
 set(TGT CSGDemoTest)
 add_executable(${TGT} CSGDemoTest.cc DemoGeo.cc DemoGrid.cc)
-target_link_libraries(${TGT} Opticks::CSG)
+target_link_libraries(${TGT} Opticks::CSG Opticks::OpticksCore)
 install(TARGETS ${TGT} DESTINATION lib)
 
 
