use the xrot side ie sign of intersect x after rotating back by phi to disqualify other half intersects, testing/plotting in CSGNodeScanTest

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
     CUTest.cc
     CSGLogTest.cc
     CSGIntersectTest.cc
+    CSGNodeScanTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
