working through the CSGOptiX scripts, add some debug

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -62,6 +62,7 @@ set(TEST_SOURCES
    SColorTest.cc
    SPackTest.cc 
    SBitTest.cc
+   SBitFromStringTest.cc
    SRandTest.cc
 
    SRngSpecTest.cc 
