ncone::decrease_z1 ncone::increase_z2 correct to also changing radius to prevent changing cone angle when z-nudged , check this using NContour NContourTest which plots SDF contours

--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -203,6 +203,7 @@ set(SOURCES
     ImageNPY.cpp
 
     NPoint.cpp
+    NContour.cpp
 
 )
 
@@ -391,6 +392,8 @@ Ellipse.hpp
 ImageNPY.hpp
 
 NPoint.hpp
+NContour.hpp
+
 
 )
 
