rejig CSGOptiXRenderTest default outputdir to be within geocache, in order to maintan connection with source geocache even thru into publication repo

--- a/CSGOptiX/tests/CMakeLists.txt
+++ b/CSGOptiX/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ project(${name} VERSION 0.1.0)
 
 set(SINGLE_SOURCES
     CSGOptiXVersion.cc
-    CSGOptiXRender.cc
+    CSGOptiXRenderTest.cc
     CSGOptiXSimulateTest.cc
 )
 
