pull CSG/CSGGenstep out of CSGOptiX/tests/CSGOptiXSimulateTest.cc to simplify and ease debug

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ set(TEST_SOURCES
     CSGNameTest.cc
     CSGTargetTest.cc
     CSGTargetGlobalTest.cc
+    CSGGenstepTest.cc
     CSGScanTest.cc
     CUTest.cc
     CSGLogTest.cc
