testing tangential frame in CenterExtentFrame for global non-instanced geometry that is oriented with respect to a sphere

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -77,6 +77,8 @@ set(SOURCES
     SensorLib.cc
     MockSensorLib.cc
     MockSensorAngularEfficiencyTable.cc
+
+    CenterExtentFrame.cc
 )
 
 
@@ -159,6 +161,7 @@ set(HEADERS
     MockSensorLib.hh
     MockSensorAngularEfficiencyTable.hh 
 
+    CenterExtentFrame.hh
 )
 
 
