prepare cegs center-extent-genstep use of tangential radius-theta-phi frame from SCenterExtentFrame : enabling sphere oriented cxs cross sectioning for global non-instanced geometry : ie tangential-to-sphere and radial-to-sphere ray shooting for global geometry

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -11,7 +11,8 @@ set(TEST_SOURCES
     CSGPrimTest.cc
     CSGSolidTest.cc
     CSGFoundryTest.cc
-    CSGFoundryLoadTest.cc
+    CSGFoundry_getCenterExtent_Test.cc
+    CSGFoundry_findSolidIdx_Test.cc
     CSGNameTest.cc
     CSGTargetTest.cc
     CSGTargetGlobalTest.cc
