first pass at CUDA capable SDF distance to CSG tree with cylinder and box primitives so far, using f4_stack.h that only holds up to 4 floats

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -20,7 +20,9 @@ set(TEST_SOURCES
     CSGScanTest.cc
     CUTest.cc
     CSGLogTest.cc
-    CSGIntersectTest.cc
+    intersect_node_phicut_test.cc 
+    intersect_node_box3_test.cc 
+    intersect_node_cylinder_test.cc 
     CSGNodeScanTest.cc
 )
 
